<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigListActivity">

    <Button
        android:id="@+id/addConfigButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/addConfig"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="addNewConfig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.358" />

    <Button
        android:id="@+id/compareConfigButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/compareConfig"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="compareConfigs"
        app:layout_constraintTop_toBottomOf="@+id/addConfigButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.358" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="accountLogout"
        app:layout_constraintTop_toBottomOf="@+id/compareConfigButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.358" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/configListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_marginTop="150dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>